<resources>
    <string name="app_name">AddressTrilinkDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="transaction_orderdetail_adress">请输入详细地址</string>
    <string name="transaction_orderdetail_adress_name">收货人:</string>
    <string name="transaction_orderdetail_adress_hint_name">请输入收货人名称</string>
    <string name="transaction_orderdetail_adress_phone">联系电话:</string>
    <string name="transaction_orderdetail_adress_hint_phone">请输入手机号码</string>
    <string name="transaction_orderdetail_adress_content">详细地址:</string>
</resources>
