<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >



    <LinearLayout
        style="@style/system_macth_wrap"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            style="@style/system_2wrap"
            android:text="@string/transaction_orderdetail_adress_name"
            android:textColor="@color/btn_bg_gray"
            android:textSize="@dimen/_15sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/transaction_orderdetail_adress_hint_name"
            android:padding="10dp"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_bg_lightgray" />
    <LinearLayout
        style="@style/system_macth_wrap"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            style="@style/system_2wrap"
            android:text="@string/transaction_orderdetail_adress_phone"
            android:textColor="@color/btn_bg_gray"
            android:textSize="@dimen/_15sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/transaction_orderdetail_adress_hint_phone"
            android:padding="10dp"
            android:inputType="phone"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_bg_lightgray" />
    <LinearLayout
        android:id="@+id/ll_select_province"
        style="@style/system_macth_wrap"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            style="@style/system_2wrap"
            android:text="所在地区"
            android:textColor="@color/btn_bg_gray"
            android:textSize="@dimen/_15sp" />

        <TextView
            android:id="@+id/tv_province"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="10dp"
            android:textSize="15sp" />
        <ImageView
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/left_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_bg_lightgray" />
    <LinearLayout
        style="@style/system_macth_wrap"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            style="@style/system_2wrap"
            android:text="@string/transaction_orderdetail_adress_content"
            android:textColor="@color/btn_bg_gray"
            android:textSize="@dimen/_15sp" />

        <EditText
            android:id="@+id/et_detail_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/transaction_orderdetail_adress"
            android:padding="10dp"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_bg_lightgray" />

</LinearLayout>